--- a/WEB-FUN_W1/GitHub_Box/index.html
+++ b/WEB-FUN_W1/GitHub_Box/index.html
@@ -10,14 +10,18 @@
 <body>
     <h1>GitHub Blocks</h1>
     <div>
-        <img src="https://octodex.github.com/nuxtocat/" alt="Cat with remote control">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <img src="NUX.gif" alt="Cat with remote control">
+        <img src="manufacturetocat.png" alt="Making Cat">
+        <img src="mona-the-rivvertertocat.png" alt="Cat for womens contribution">
+    </div>
+    <div>
+        <img src="OctoAsians_dex_Full.png" alt="Pacific Islander Asian American Heritage Cat Party">
+        <img src="Octogatos.png" alt="Hispanic Heritage Month Cats">
+    </div>
+    <div>
+        <img src="Octoqueer.png" alt="Pride Cat Celebration">
+        <img src="Terracottocat_Single.png" alt="Terracotta Warrior Cat">
+        <img src="yogitocat.png" alt="Yoga Cat">
     </div>
 </body>
 </html>
