--- a/WEB-FUN_W1/Profile/index.html
+++ b/WEB-FUN_W1/Profile/index.html
@@ -8,7 +8,9 @@
     <title>Profile</title>
 </head>
 <body>
+
     <!-- Profile Navigation Bar -->
+
     <div class="flex nav align-center justify-around justify-between">
         <div class="flex align-center justify-around justify-between">
             <h1>Profile</h1>
@@ -22,10 +24,11 @@
     <div class="container flex">
 
         <!-- Left column -->
+
         <div class="col-1">
-            <div class="usercard fles aligh-centerjustify-around justify-between">
-                <div class= usercard-header>
-                    <img src="user-circle.png" alt="Selfie of user">
+            <div class="usercard">
+                <div class="header-usercard">
+                    <img src="user-circle.jpg" alt="selfie of user">
                 </div>
             </div>
 
@@ -38,6 +41,7 @@
         </div>
 
         <!-- Right column -->
+
         <div class="col-2 flex">
             <h1>Right</h1>
         </div>
