--- a/WEB-FUN_W2/Button -Clicker/index.html
+++ b/WEB-FUN_W2/Button -Clicker/index.html
@@ -22,7 +22,7 @@
                             <h1>Ninja</h1>
                             <p>Noun</p>
                             <p>Plural: ninjas</p>
-                            <button class="likeButton"  onclick="alertWord()">13 Likes</button>
+                            <button class="likeButton"  onclick="alert()">13 Likes</button>
                         </div>
                         <div class="col-5 center definition">
                             <p>
@@ -51,7 +51,7 @@
                 <div class="content">
                     <div class="col-2 center">
                         <h1>Dojonary is defined by you</h1>
-                        <button class=submitDef onclick="removeButton(self)">Add Definition</button>
+                        <button class=submitDef onclick="removeButton()">Add Definition</button>
                     </div>
                 </div>
             </div>
