--- a/WEB-FUN_W2/Button -Clicker/index.html
+++ b/WEB-FUN_W2/Button -Clicker/index.html
@@ -22,7 +22,7 @@
                             <h1>Ninja</h1>
                             <p>Noun</p>
                             <p>Plural: ninjas</p>
-                            <button class="likeButton"  onclick="alert()">13 Likes</button>
+                            <button class="likeButton"  onclick="message()">13 Likes</button>
                         </div>
                         <div class="col-5 center definition">
                             <p>
