--- a/WEB-FUN_W2/Likes/index.html
+++ b/WEB-FUN_W2/Likes/index.html
@@ -5,10 +5,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.js">
+    <link rel="stylesheet" href="style.css">
     <title>Links</title>
 </head>
 <body>
+
+    <div class="container">
+
+        <div class="network"> Network</div>
+        <div class="your-feed"> Your Feed</div>
+        <div class="box">
+            <div class="col-2">
+                <div class="avatar">
+                    <h1>avatar</h1>
+                </div>
+            </div>
+            <div class=" col-5">
+                <div class="feed-messages">
+                    <div class="individual-messages">
+                        <div class="name">
+                            <div class="names-likes">
+                                <h2>Neil M</h2>
+                            </div>
+                            <div>                                   
+                                <button>like</button>
+                            </div>    
+                        </div>
+                        <div class="contents">
+                            <p> Message</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+    </div>
     
 <script src="script.js"></script>
 </body>
