--- a/WEB-FUN_W2/Likes/index.html
+++ b/WEB-FUN_W2/Likes/index.html
@@ -17,33 +17,59 @@
         <div class="box">
             <div class="col-2">
                 <div class="avatar">
-                    <h1>avatar</h1>
+                    <div>
+                        <img src="icons/user-circle.png" alt="User selfie">
+                    </div>
+                    <div>
+                        <a class="add-avatar" href="#">Add your avatar</a>
+                        <h3 class="user-name">James Doe</h3>
+                    </div>
                 </div>
             </div>
-            <div class=" col-5">
+            <div class=" col-5">  
                 <div class="feed-messages">
                     <div class="individual-messages">
                         <div class="name">
                             <div class="names-likes">
                                 <h2>Neil M</h2>
                             </div>
-                            <div>                                   
-                                <button>like</button>
+                            <div class="likes-btn">       
+                                <p class="likes"> <p id="count1">9</p>Like(s)</p>                            
+                                <button id="" class="button" onclick="vote('#count1')">like</button>
                             </div>    
-                        </div>
-                        <div class="contents">
-                            <p> Message</p>
-                        </div>
+                         </div>
+                    </div>
+                </div>
+                <div class="feed-messages">
+                    <div class="individual-messages">
+                        <div class="name">
+                            <div class="names-likes">
+                                <h2>Neil M</h2>
+                            </div>
+                            <div class="likes-btn">       
+                                <p class="likes"> <p id="count2">9</p>Like(s)</p>                            
+                                <button id="" class="button" onclick="vote('#count2')">like</button>
+                            </div>    
+                         </div>
+                    </div>
+                </div>
+                <div class="feed-messages">
+                    <div class="individual-messages">
+                        <div class="name">
+                            <div class="names-likes">
+                                <h2>Neil M</h2>
+                            </div>
+                            <div class="likes-btn">       
+                                <p class="likes"> <p id="count3">9</p>Like(s)</p>                            
+                                <button id="" class="button" onclick="vote('#count3')">like</button>
+                            </div>    
+                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-
-
-
     </div>
     
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
