--- a/WEB-FUN_W2/Button -Clicker/index.html
+++ b/WEB-FUN_W2/Button -Clicker/index.html
@@ -51,7 +51,7 @@
                 <div class="content">
                     <div class="col-2 center">
                         <h1>Dojonary is defined by you</h1>
-                        <button class=submitDef onclick="removeButton()">Add Definition</button>
+                        <button class=submitDef onclick="removeButton(this)">Add Definition</button>
                     </div>
                 </div>
             </div>
