revision and validation

--- a/WEB-FUN_W1/GitHub_Blocks/index.html
+++ b/WEB-FUN_W1/GitHub_Blocks/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">  
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    
+    <title>GitHub Blocks</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>GitHub Blocks</h1>
-    <div class="row1">
-        <img src="https://octodex.github.com/images/NUX_Octodex.gif" alt="Cat with remote control">
-        <img src="https://octodex.github.com/images/manufacturetocat.png" alt="Making Cat">
-        <img src="https://octodex.github.com/images/mona-the-rivetertocat.png" alt="Cat for womens contribution">
+    <h1 class="header">GitHub Blocks</h1>
+    <div class="flex row first">
+        <img src="images/catstello.png" alt="catstello">
+        <img src="images/dinotocat.png" alt="">
+        <img src="images/inflatocat.png" alt="">
     </div>
-    <div class="row2">
-        <img src="https://octodex.github.com/images/OctoAsians_dex_Full.png" alt="Pacific Islander Asian American Heritage Cat Party">
-        <img src="https://octodex.github.com/images/Octogatos.png" alt="Hispanic Heritage Month Cats">
+    <div class="flex row second">
+        <img src="images/OctoAsians_dex_Full.png" alt="">
+        <img src="images/Octogatos.png" alt="">
     </div>
-    <div class="row3">
-        <img src="https://octodex.github.com/images/Octoqueer.png" alt="Pride Cat Celebration">
-        <img src="https://octodex.github.com/images/Terracottocat_Single.png" alt="Terracotta Warrior Cat">
-        <img src="https://octodex.github.com/images/yogitocat.png" alt="Yoga Cat">
+    <div class="flex row third">
+        <img src="images/Octoqueer.png" alt="">
+        <img src="images/skatetocat.png" alt="">
+        <img src="images/yogitocat.png" alt="">
     </div>
-    <div class="footer">
-        <p>Images from<a href="https://octodex.github.com/">GitHub Octodex</a></p>
-    </div>  
+    <h5>Images from <a href="#">GitHub Octodex</a></h5>
+
+
+
+    
 </body>
 </html>
