revision and validation

--- a/WEB-FUN_W2/Likes/index.html
+++ b/WEB-FUN_W2/Likes/index.html
@@ -34,10 +34,11 @@
                                 <h2>Neil M</h2>
                             </div>
                             <div class="likes-btn">       
-                                <p class="likes"> <p id="count1">9</p>Like(s)</p>                            
-                                <button id="" class="button" onclick="vote('#count1')">like</button>
+                                </span>  
+                                <p class="likes" id="count1"> <span>9</span>like(s)</p>                         
+                                <button class="btn" onclick="vote('#count1')" >like </button>
                             </div>    
-                         </div>
+                        </div>
                     </div>
                 </div>
                 <div class="feed-messages">
@@ -47,10 +48,11 @@
                                 <h2>Neil M</h2>
                             </div>
                             <div class="likes-btn">       
-                                <p class="likes"> <p id="count2">9</p>Like(s)</p>                            
-                                <button id="" class="button" onclick="vote('#count2')">like</button>
+                                </span>  
+                                <p class="likes" id="count2"> <span>9</span>like(s)</p>                         
+                                <button class="btn" onclick="vote('#count2')" >like </button>
                             </div>    
-                         </div>
+                        </div>
                     </div>
                 </div>
                 <div class="feed-messages">
@@ -60,10 +62,11 @@
                                 <h2>Neil M</h2>
                             </div>
                             <div class="likes-btn">       
-                                <p class="likes"> <p id="count3">9</p>Like(s)</p>                            
-                                <button id="" class="button" onclick="vote('#count3')">like</button>
+                                </span>  
+                                <p class="likes" id="count3"> <span>9</span>like(s)</p>                         
+                                <button class="btn" onclick="vote('#count3')" >like </button>
                             </div>    
-                         </div>
+                        </div>
                     </div>
                 </div>
             </div>
