--- a/WEB-FUN_W2/calculator/index.html
+++ b/WEB-FUN_W2/calculator/index.html
@@ -16,17 +16,20 @@
                 <button onclick="press(9);">9</button>
                 <button class="operator" onclick="setOP('/');">÷</button>
             </div>
+
             <div class="row">
                 <button onclick="press(4);">4</button>
                 <button onclick="press(5);">5</button>
                 <button onclick="press(6);">6</button>
                 <button class="operator" onclick="setOP('*');">×</button>
             </div>
+
                 <div class="row">
                 <button onclick="press(1);">1</button>
                 <button onclick="press(2);">2</button>
                 <button onclick="press(3);">3</button>
-                <button class="operator" onclick="setOP('-');">−</button>
+                <button cl
+                ass="operator" onclick="setOP('-');">−</button>
             </div>
                 <div class="row">
                 <button onclick="clr();">C</button>
