--- a/MERN/JS Fundamentals/convertToArrow.html
+++ b/MERN/JS Fundamentals/convertToArrow.html
@@ -20,7 +20,7 @@
     <p>
         We just like random interactivity in the site, including a fun effect if you hover over <span id="hover-this">        <b>this.</b></span>
     </p>
-    <p onmouseover="mouseOverFunction(this)">
+    <p id ="parcolor" onmouseover="mouseOverFunction(this)">
         Another task: This should be another feature. 
         I want to click anywhere in this paragraph tag and I want to be able to change the background color to whatever is in this input: <input type="text" id = "favcolor" name="favcolor"/>.
     </p>
@@ -43,8 +43,10 @@
         const setBackgroundColorById = (id, color) =>{
             document.getElementById(id).style = "background-color: " + color;
         }
-        const mouseOverFunction = (el) =>{
-            el.style = "background-color: grey";
+        const mouseOverFunction = ("parcolor", "favcolor");{
+            const setBackgroundColorById = ("parcolor", "favcolor");{
+            document.getElementById("parcolor").style = "background-color: " + "favcolor";
+        }
         }
     </script>
 </body>
