--- a/MERN/JS Fundamentals/convertToArrow.html
+++ b/MERN/JS Fundamentals/convertToArrow.html
@@ -43,10 +43,8 @@
         const setBackgroundColorById = (id, color) =>{
             document.getElementById(id).style = "background-color: " + color;
         }
-        const mouseOverFunction = ("parcolor", "favcolor");{
-            const setBackgroundColorById = ("parcolor", "favcolor");{
-            document.getElementById("parcolor").style = "background-color: " + "favcolor";
-        }
+        const mouseOverFunction = (el,) =>{
+            el.style = setBackgroundColorById("parcolor", "favcolor");
         }
     </script>
 </body>
